revise to Onion Architecture

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,5 @@
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
     "editor.detectIndentation": false,
-    "cSpell.words": ["nestjs", "uuidv"]
+    "cSpell.words": ["nestjs", "requestid", "uuidv"]
 }
