--- a/jest.config.json
+++ b/jest.config.json
@@ -5,7 +5,7 @@
     "moduleFileExtensions": ["js", "json", "ts"],
     "rootDir": ".",
     "testEnvironment": "node",
-    "testRegex": ".test.ts$",
+    "testRegex": ".spec.ts$",
     "transform": {
         "^.+\\.(t|j)s$": "ts-jest"
     }
