--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
     "nest-winston": "^1.9.7",
+    "nestjs-i18n": "^10.4.9",
     "nestjs-request-context": "^3.0.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
